@@ -25,6 +25,7 @@
 //-----------------------------------------------------------------------------
 #include <vector>
 #include <string>
+#include <stdarg.h>
 //-----------------------------------------------------------------------------
 mreal MGL_EXPORT mglLinear(const mreal *a, long nx, long ny, long nz, mreal x, mreal y, mreal z);
 mreal MGL_EXPORT mglSpline3(const mreal *a, long nx, long ny, long nz, mreal x, mreal y, mreal z,mreal *dx=0, mreal *dy=0, mreal *dz=0);
@@ -137,6 +138,13 @@ using mglDataA::Momentum;
 	{	if(d.size()>0)	Set(&(a[0]),d.size());	else	Create(1);	}
 	inline void Set(const std::vector<double> &d)
 	{	if(d.size()>0)	Set(&(a[0]),d.size());	else	Create(1);	}
+	inline void SetList(long n, ...)
+	{
+		if(n<1)	return;
+		mgl_data_create(this,n,1,1);
+		va_list vl;	va_start(vl,n);
+		for(long i=0;i<n;i++)	a[i] = va_arg(vl,double);
+	}
 
 	/// Create or recreate the array with specified size and fill it by zero
 	inline void Create(long mx,long my=1,long mz=1)
@@ -544,6 +552,9 @@ inline mglData mglTriangulation(const mglDataA &x, const mglDataA &y, const mglD
 {	return mglData(true,mgl_triangulation_3d(&x,&y,&z));	}
 inline mglData mglTriangulation(const mglDataA &x, const mglDataA &y)
 {	return mglData(true,mgl_triangulation_2d(&x,&y));	}
+/// Get array which is n-th pairs {x[i],y[i]} for iterated function systems (fractal) generated by A
+inline mglData mglIFS(const mglDataA &A, long n, long skip=20)
+{	return mglData(true,mgl_data_ifs_2d(&A,n,skip));	}
 //-----------------------------------------------------------------------------
 /// Get sub-array of the data with given fixed indexes
 inline mglData mglSubData(const mglDataA &dat, long xx, long yy=-1, long zz=-1)
