@@ -884,11 +884,11 @@ void MGL_EXPORT mgl_datac_join(HADT d, HCDT v)
 	const mglDataC *mv = dynamic_cast<const mglDataC *>(v);
 	long vx=v->GetNx(), vy=v->GetNy(), vz=v->GetNz(), m = vx*vy*vz;
 
-	if(nx==vx && ny==vy && (nz>1 || vz>1))	d->nz += vz;
+	if(nx==vx && ny==vy && ny>1)	d->nz += vz;
 	else
 	{
 		ny *= nz;	vy *= vz;
-		if(nx==vx && (ny>1 || vy>1))
+		if(nx==vx && nx>1)
 		{	d->nz = 1;	d->ny = ny+vy;	}
 		else
 		{	d->ny = d->nz = 1;	d->nx = k+m;	}
